--- a/css/style-new.css
+++ b/css/style-new.css
@@ -90,8 +90,8 @@ header{
 
 .welcome{
     margin-top: 75px;
-    background-image: url(../img/background1.jpg);    
-    background-image: url(../img/background2.jpg);    
+    background-image: url(../background-travel.jpg);    
+/*     background-image: url(../background-travel.jpg);     */
     background-size: cover;        
     height: 80vh;        
     display: -webkit-flex;
