--- a/css/style-new.css
+++ b/css/style-new.css
@@ -91,7 +91,7 @@ header{
 .welcome{
     margin-top: 75px;
     background-image: url(../background-travel.jpg);    
-/*     background-image: url(../background-travel.jpg);     */
+    background-image: url(../background-travel.jpg);    
     background-size: cover;        
     height: 80vh;        
     display: -webkit-flex;
